--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -819,11 +819,25 @@ td {
     width: 500px;
 }
 
-#modalAsistencia .modal-body{
+.modalContainer {
     overflow-x: auto;
 }
 
-.tablaAsistencia th{
+.tablaAsistencia .modal-dialog,
+.tablaPresencial .modal-dialog,
+.tablaFormador .modal-dialog,
+.tablaDocumentacion .modal-dialog,
+.tablaControl .modal-dialog{
+    max-width: 90% !important;
+}
+
+
+
+.tablaAsistencia th,
+.tablaPresencial th,
+.tablaFormador th,
+.tablaDocumentacion th,
+.tablaControl th {
     background-color: #85BECE !important;
     color: var(--blanco, #FFF);
     font-family: Lato;
@@ -834,7 +848,11 @@ td {
     border: 1px solid white;    
 }
 
-.tablaAsistencia td{
+.tablaAsistencia td,
+.tablaPresencial td,
+.tablaFormador td,
+.tablaControl td,
+.tablaDocumentacion td {
     white-space: nowrap;
 }
 
@@ -881,3 +899,20 @@ td {
     line-height: normal;
 }
 
+.totalSesionesContainer,
+.totalAsistenciasContainer{
+    border-radius: 2px;
+    border: 1px solid #69B3D6;
+    display: flex;
+    padding: 0px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    color: var(--gris, #636363);
+    text-align: center;
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
