--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,3 +916,91 @@ td {
     font-weight: 400;
     line-height: 30px;
 }
+
+.footerCalendarModal{
+    border-top: none !important;
+}
+
+.btn-download {
+    border-radius: 4px;
+    background-color: #74B160;
+    box-shadow: 1px 1px 2px 0px rgba(134, 135, 135, 0.25);
+    color: white;
+    border: none;
+    padding: 8px 15px;
+}
+
+#calendarModal .modal-content {
+    height: auto;
+    min-height: auto;
+}
+
+.modalMensaje .modal-content {
+    height: auto;
+    min-height: auto;
+}
+
+.modalFile .modal-header p{
+    color: #646464;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 0;
+}
+
+.modalFile .modal-header{
+    border-radius: 5px;
+    background: var(--fondos, #F2F2F2);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.modalFile th{
+    color: var(--Principal, #2F647E);
+    text-align: right;
+    font-family: Lato;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center;
+    background: #F5F5F5 !important;
+}
+
+.modalFile td{
+    text-align: center !important;
+    color: var(--gris, #636363);
+    text-align: right;
+    font-family: Lato;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.modalFile .table>:not(:last-child)>:last-child>* {
+    border-bottom: none;
+}
+
+.modalFile .table-bordered th, .table-bordered td {
+    border: 1px solid #dee2e6;
+}
+
+.modalFile .table thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #dee2e6;
+}
+.modalFile .highlight-row {
+    background-color: #D9D9D9;
+}
+
+.modalFile .highlight-row > td:nth-child(1) {
+    color: var(--gris, #636363);
+    text-align: right;
+    font-family: Lato;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 30px;
+}
