--- a/assets/css/administrador.css
+++ b/assets/css/administrador.css
@@ -148,7 +148,8 @@ aside {
     white-space: nowrap; 
     overflow: hidden;    
     text-overflow: ellipsis;
-    max-width: 50px;     
+    max-width: 50px;    
+    user-select: none; 
 }
 
 
