--- a/assets/css/administrador.css
+++ b/assets/css/administrador.css
@@ -837,6 +837,7 @@ nav {
     border-radius: 4px;
     border: 1px solid #CCC;
     padding-top: 15px;
+    overflow-x: auto;
 }
 
 .tablaModoTabla{
@@ -1340,6 +1341,68 @@ nav {
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
+}
+
+.rightSubmenu {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start; 
+    align-items: center;
+}
+
+@media (max-width: 1000px) {
+    .rightSubmenu {
+        flex-wrap: wrap;
+        margin-left: 5px;
+    }
+
+    .btn2{
+        margin-top: 5px;
+    }
+
+    .bottomForm, .rightMenuSignature, .botonesCalendarioIzquierda {
+        flex-wrap: wrap;
+    }
+
+    #formularioSesion > div > div > div.modal-body.d-flex.align-items-center.justify-content-center.position-relative > img, .bottomMenuSignature img{
+        width: 100%;
+    }
+
+    .rightMenuSignature{
+        margin-top: 20px !important;
+    }
+
+    .phoneIcon{
+        margin-bottom: 20px;
+    }
+
+    #modalFirma .modal-body{
+        flex-direction: column;
+    }
+
+    .tablaPillCalendario, .tablaModoTabla{
+        overflow-x: auto;
+    }
+
+    .calcular, .guardarModulos{
+        white-space: nowrap;
+    }
+
+    .guardarModulos{
+        margin-top: 5px;
+    }
+
+    #controlAsistenciaFirmado .modal-body img{
+        width: 100%;
+    }
+
+    .inputGrupoPresencial{
+        flex-wrap: nowrap !important;
+    }
+
+    .inputGrupoPresencial select{
+        width: 100px !important;
+    }
 }
 
 .rightSubmenu .btn1, .rightSubmenu .btn1:hover{
@@ -1978,4 +2041,50 @@ nav {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+}
+
+
+.hamburger-btn {
+    display: none; 
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+#hamburger-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media (max-width: 1024px) {
+    .hamburger-btn {
+        display: block; 
+    }
+
+    #hamburger-menu {
+        display: none; 
+        position: absolute;
+        right: 0;
+        top: 100%;
+        background-color: white;
+        box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+        width: fit-content; 
+    }
+
+    #hamburger-menu.show {
+        display: flex; 
+        padding: 10px;
+    }
+
+    .selectGroup{
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .rightMenu > div:not(.hamburger-btn),
+    .rightMenu > div:not(#hamburger-menu) {
+        display: none; 
+    }
 }
