--- a/assets/css/gestor.css
+++ b/assets/css/gestor.css
@@ -1297,3 +1297,13 @@ padding-bottom: 0;
         display: none; 
     }
 }
+
+.profesoradoPopover{
+    color: var(--gris, #636363);
+    text-align: center;
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
