--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,22 @@ td {
 
 .mapPopoverContent p {
     margin: 0;
+    color: #A1A1A1;
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.mapPopoverContent a{
+    color: var(--Principal, #2F647E);
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none;
 }
 
 .bi-circle-fill {
@@ -1058,3 +1074,101 @@ td {
     }
 }
 
+.profesoradoPopover{
+    color: var(--gris, #636363);
+    text-align: center;
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.panelProfesor{
+    color: var(--Principal, #2F647E);
+    text-align: center;
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+
+.popover-header{
+    background-color: white !important;
+    color: var(--gris, #636363) !important;
+    text-align: center;
+    font-family: Lato;
+    font-size: 11px !important;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-bottom: 1px solid rgba(223, 223, 223, 0.56) !important;
+}
+
+.responsableGrupoPopover{
+    color: #A1A1A1;
+    font-family: Lato;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.modal-body-title{
+    color: var(--gris, #636363);
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.modal-body-subtitle{
+    color: #A1A1A1;
+    font-family: Lato;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+#resumenControlModal table th{
+    background: var(--fondos, #F2F2F2) !important;
+    color: var(--gris, #636363);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.nombreCell,
+.diplomaCell,
+.observacionesCell{
+    color: var(--gris, #636363);
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+}
+
+.diplomaCell,
+.certificaCell{
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+#resumenControlModal .modal-dialog{
+    max-width: 700px !important;
+}
